--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </font>
 
     <p> <a href="https://celine10811020.github.io/Stock.HuoLi/" target="_blank"> 獲利計算機 </a> </p>
-    <p> <a href="https://celine10811020.github.io/StockGoldenSection/" target="_blank"> 10%漲/跌停板、黃金分割率 計算機 </a> </p>
+    <p> <a href="https://celine10811020.github.io/StockGoldenSection/" target="_blank"> 黃金分割計算機 </a> </p>
   </div>
 </body>
 
