--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     </font>
 
     <p> <a href="https://celine10811020.github.io/Stock.HuoLi/" target="_blank"> 獲利計算機 </a> </p>
+    <p> <a href="https://celine10811020.github.io/Stock.YiPaHuoLi/" target="_blank"> 1%獲利計算機 </a> </p>
     <p> <a href="https://celine10811020.github.io/StockGoldenSection/" target="_blank"> 黃金分割計算機 </a> </p>
   </div>
 </body>
